python/test-data/testTypesSequence1.err
untypy.error.UntypyTypeError
given:    1
expected: value of type Sequence

context: foo(seq: Sequence) -> None
                  ^^^^^^^^
declared at: test-data/testTypesSequence1.py:3
  3 | def foo(seq: Sequence) -> None:
  4 |     print(seq)
  5 |     pass

caused by: test-data/testTypesSequence1.py:10
 10 | foo(1) # should fail
